<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfab.layouttestproject.MainLayoutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_servering"
        android:id="@+id/yourServingTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temper"
        android:id="@+id/temperature"
        android:layout_below="@+id/yourServingTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/hotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot"
        android:layout_marginTop="56dp"
        android:onClick="onClickHotButton"
        android:layout_marginEnd="88dp"
        android:layout_below="@+id/degrees"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="@string/milk"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/hotButton"
        android:layout_alignEnd="@+id/temperature" />

    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkbox_milk"
        android:layout_alignStart="@+id/checkbox_milk" />

    <CheckBox
        android:id="@+id/checkbox_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkbox_sugar"
        android:layout_alignStart="@+id/checkbox_sugar" />

    <Button
        android:id="@+id/coldButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cold"
        android:layout_marginLeft="52dp"
        android:onClick="onClickColdButton"
        android:layout_alignBaseline="@+id/hotButton"
        android:layout_alignBottom="@+id/hotButton"
        android:layout_toStartOf="@+id/hotButton"
        android:layout_marginEnd="33dp" />

    <TextView
        android:id="@+id/degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/hotButton"
        android:layout_alignTop="@+id/temperature"
        android:text="@string/nihuya" />

    <CheckBox
        android:id="@+id/checkbox_ice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ice"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkbox_lemon"
        android:layout_alignStart="@+id/checkbox_lemon" />

    <Button
        android:id="@+id/makeTeaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkbox_lemon"
        android:layout_alignEnd="@+id/hotButton"
        android:text="@string/make_tea"
        android:onClick="onClickMakeTea"
        />


</RelativeLayout>
